--- a/0.3-quizapp/index.html
+++ b/0.3-quizapp/index.html
@@ -9,14 +9,15 @@
       <h1>Simple Quiz</h1>
       <div class="quiz">
         <h2 id="question">Question goes here</h2>
-        <div id="anser-button">
+        <div id="answer-buttons">
           <button class="btn">Answer 1</button>
           <button class="btn">Answer 2</button>
           <button class="btn">Answer 3</button>
           <button class="btn">Answer 4</button>
         </div>
-        <button id="next">Next</button>
+        <button id="next-btn">Next</button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
